<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/choose_dessert"
        android:layout_below="@id/textintro"/>

    <ImageButton
        android:id="@+id/donut"
        android:layout_width="171dp"
        android:layout_height="182dp"
        android:layout_below="@+id/choose_dessert"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/donut"
        android:onClick="showDonutOrder"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/donut_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_dessert"
        android:layout_toRightOf="@id/donut"
        android:padding="@dimen/padding_wide"
        android:text="@string/donut"
        />

    <ImageButton
        android:id="@+id/ice_cream"
        android:layout_width="172dp"
        android:layout_height="183dp"
        android:layout_below="@id/donut"
        android:contentDescription="@string/ice_cream"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/donut"
        android:layout_toRightOf="@id/ice_cream"
        android:padding="@dimen/padding_wide"
        android:text="@string/ice_cream" />

    <ImageButton
        android:id="@+id/froyo"
        android:layout_width="175dp"
        android:layout_height="188dp"
        android:layout_below="@id/ice_cream"
        android:onClick="showFroyoOrder"
        android:contentDescription="@string/froyo"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/froyo_circle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:padding="@dimen/padding_wide"
        android:text="@string/froyo" />


</RelativeLayout>